--- a/alacritty.yml
+++ b/alacritty.yml
@@ -148,46 +148,75 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 # Colors (Gruvbox dark)
-colors:
-  primary:
-    # hard contrast background - '#1d2021'
-    background:        &gruvbox_dark_bg '#1d2021'
-    # soft contrast background - '#32302f'
-    foreground:        '#fbf1c7'
-    bright_foreground: '#f9f5d7'
-    dim_foreground:    '#f2e5bc'
-  cursor:
-    text:   CellBackground
-    cursor: CellForeground
-  vi_mode_cursor:
-    text:   CellBackground
-    cursor: CellForeground
-  # search:
-  #   matches:
-  #     foreground: '#000000'
-  #     background: '#ffffff'
-  #   focused_match:
-  #    foreground: CellBackground
-  #    background: CellForeground
-  #   bar:
-  #     background: ''
-  #     foreground: ''
-  # line_indicator:
-  #   foreground: None
-  #   background: None
-  selection:
-    text:       CellBackground
-    background: CellForeground
-  normal:
-    black:   *gruvbox_dark_bg
-    red:     '#cc241d'
-    green:   '#98971a'
-    yellow:  '#d79921'
-    blue:    '#458588'
-    magenta: '#b16286'
-    cyan:    '#689d6a'
-    white:   '#a89984'
+# colors:
+#   primary:
+#     # hard contrast background - '#1d2021'
+#     background:        &gruvbox_dark_bg '#1d2021'
+#     # soft contrast background - '#32302f'
+#     foreground:        '#fbf1c7'
+#     bright_foreground: '#f9f5d7'
+#     dim_foreground:    '#f2e5bc'
+#   cursor:
+#     text:   CellBackground
+#     cursor: CellForeground
+#   vi_mode_cursor:
+#     text:   CellBackground
+#     cursor: CellForeground
+#   # search:
+#   #   matches:
+#   #     foreground: '#000000'
+#   #     background: '#ffffff'
+#   #   focused_match:
+#   #    foreground: CellBackground
+#   #    background: CellForeground
+#   #   bar:
+#   #     background: ''
+#   #     foreground: ''
+#   # line_indicator:
+#   #   foreground: None
+#   #   background: None
+#   selection:
+#     text:       CellBackground
+#     background: CellForeground
+#   normal:
+#     black:   *gruvbox_dark_bg
+#     red:     '#cc241d'
+#     green:   '#98971a'
+#     yellow:  '#d79921'
+#     blue:    '#458588'
+#     magenta: '#b16286'
+#     cyan:    '#689d6a'
+#     white:   '#a89984'
   # indexed_colors: []
+
+# Colors (One Darker)
+colors:
+  # Default colors
+  primary:
+    background: '#1f2227'
+    foreground: '#abb2bf'
+
+  # Normal colors
+  normal:
+    black:   '#5c6370'
+    red:     '#e06c75'
+    green:   '#98c379'
+    yellow:  '#e5c07b'
+    blue:    '#61afef'
+    magenta: '#c678dd'
+    cyan:    '#56b6c2'
+    white:   '#abb2bf'
+
+  # Bright colors
+  bright:
+    black:   '#5c6370'
+    red:     '#e06c75'
+    green:   '#98c379'
+    yellow:  '#e5c07b'
+    blue:    '#61afef'
+    magenta: '#c678dd'
+    cyan:    '#56b6c2'
+    white:   '#ffffff'
 
 # Colors (Tomorrow Night)
 #colors:
