--- a/alacritty.yml
+++ b/alacritty.yml
@@ -47,9 +47,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
-    #x: 0
-    #y: 0
+  padding:
+    x: 0
+    y: 0
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -122,7 +122,7 @@ font:
     family: JetBrainsMono Nerd Font
     style: Bold Italic
 
-  size: 9.5
+  size: 12
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
